--- a/gradle.properties
+++ b/gradle.properties
@@ -37,6 +37,16 @@ mapping_channel=parchment
 # This must match the format required by the mapping channel.
 mapping_version=2023.09.03-1.20.1
 
+## Dependencies Properties
+
+# Just Enough Items
+jei_minecraft_version = 1.20.1
+jei_version = 15.20.0.102
+
+# Create
+create_version = 0.5.1.h-48
+flywheel_version = 0.6.11-13
+registrate_version = MC1.20-1.3.3
 
 ## Mod Properties
 
