--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,6 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
 
-mixin{
-
-
-
-}
-
 minecraft {
     // The mappings can be changed at any time and must be in the following format.
     // Channel:   Version:
@@ -167,9 +161,9 @@ dependencies {
 
     // Example mod dependency with JEI - using fg.deobf() ensures the dependency is remapped to your development mappings
     // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
-    compileOnly fg.deobf("mezz.jei:jei-${jei_minecraft_version}-common-api:${jei_version}")
-    compileOnly fg.deobf("mezz.jei:jei-${jei_minecraft_version}-forge-api:${jei_version}")
-    runtimeOnly fg.deobf("mezz.jei:jei-${jei_minecraft_version}-forge:${jei_version}")
+    //compileOnly fg.deobf("mezz.jei:jei-${jei_minecraft_version}-common-api:${jei_version}")
+    //compileOnly fg.deobf("mezz.jei:jei-${jei_minecraft_version}-forge-api:${jei_version}")
+    //runtimeOnly fg.deobf("mezz.jei:jei-${jei_minecraft_version}-forge:${jei_version}")
 
     compileOnly fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
     implementation fg.deobf("com.jozufozu.flywheel:flywheel-forge-${minecraft_version}:${flywheel_version}")
@@ -186,9 +180,9 @@ dependencies {
     implementation fg.deobf("curse.maven:geckolib-388172:5675221")
     implementation fg.deobf("curse.maven:create-northstar-1071749:5611707")
 
-    //implementation fg.deobf("curse.maven:selene-499980:5785055")
-    //implementation fg.deobf("curse.maven:supplementaries-412082:5676069")
-    //implementation fg.deobf("curse.maven:amendments-896746:5697384")
+    implementation fg.deobf("curse.maven:selene-499980:5785055")
+    implementation fg.deobf("curse.maven:supplementaries-412082:5676069")
+    implementation fg.deobf("curse.maven:amendments-896746:5697384")
 
     implementation fg.deobf("curse.maven:balm-531761:5644976")
     implementation fg.deobf("curse.maven:cooking-for-blockheads-231484:5735271")
